--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "easy-circular-progress": "^1.0.4",
     "firebase": "^7.15.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -33,7 +34,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.6",
+    "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   }
