--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.15.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-offline": "^2.0.8",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.4",
     "vuex": "^3.5.1"
